// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles)
    menuAction={[Function]}
  />
  <ForwardRef(WithStyles)
    closeFunc={[Function]}
    isOpen={false}
  />
  <Switch>
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      path="/about"
      render={[Function]}
    />
    <Route
      path="/faq"
      render={[Function]}
    />
    <Route
      path="/bugs"
      render={[Function]}
    />
    <Route
      path="/contact"
      render={[Function]}
    />
    <Route
      path="/legal"
      render={[Function]}
    />
    <Route
      render={[Function]}
    />
  </Switch>
</React.Fragment>
`;

exports[`App should toggle navigation 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles)
    menuAction={[Function]}
  />
  <ForwardRef(WithStyles)
    closeFunc={[Function]}
    isOpen={true}
  />
  <Switch>
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      path="/about"
      render={[Function]}
    />
    <Route
      path="/faq"
      render={[Function]}
    />
    <Route
      path="/bugs"
      render={[Function]}
    />
    <Route
      path="/contact"
      render={[Function]}
    />
    <Route
      path="/legal"
      render={[Function]}
    />
    <Route
      render={[Function]}
    />
  </Switch>
</React.Fragment>
`;
